fixed admin points page dark mode bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,5 +25,5 @@
 }
 body {
     color: var(--text-color) !important;
-    background-color: var(--theme-background-color);
+    background-color: var(--theme-background-color) !important;
 }
